# zerod

./: CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.arm-unknown-linux-gnueabihf  Dockerfile.x86_64-unknown-linux-gnu  LICENSE  README.md  zerod.toml.example
.github/workflows/: release.yml
assets/: zerod.service.in
crates/bluetooth/: Cargo.toml
crates/bluetooth/src/: agent.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/zerod/v1alpha1/: bluetooth.proto  config.proto  events.proto  snapcast.proto  stream.proto  system.proto  systemd.proto  volume.proto
crates/proto/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: bluetooth.rs  config.rs  events.rs  lib.rs  settings.rs  snapcast.rs  stream.rs  system.rs  systemd.rs  volume.rs
crates/snapcast/: Cargo.toml
crates/snapcast/src/: client.rs  lib.rs  types.rs
crates/stream/: Cargo.toml
crates/stream/src/: alsa_sink.rs  cpal_sink.rs  decoder.rs  demux.rs  fetcher.rs  lib.rs  manifest.rs  output.rs  player.rs  sink.rs
crates/stream/src/sources/: librespot.rs  librespot_stub.rs  mod.rs
crates/systemd/: Cargo.toml
crates/systemd/src/: lib.rs
crates/volume/: Cargo.toml
crates/volume/src/: lib.rs
src/: main.rs  service.rs
