[package]
name = "zerod"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zerod"
path = "src/main.rs"

[workspace]
members = [
    "crates/proto",
    "crates/bluetooth",
    "crates/stream",
    "crates/systemd",
    "crates/config",
    "crates/server",
    "crates/volume",
]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
bytes = "1"
futures = "0.3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost = "0.13"
tonic = "0.12"
tonic-build = "0.12"
tonic-reflection = "0.12"
url = "2"

[dependencies]
zerod-proto = { path = "crates/proto" }
zerod-server = { path = "crates/server" }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
