[package]
name = "zerod-bluetooth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
zerod-events = { path = "../events" }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["bluetoothd"] }
futures = { workspace = true }
tokio = { workspace = true }
