[package]
name = "zerod-bluetooth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
zerod-events = { path = "../events" }

[target.'cfg(target_os = "linux")'.dependencies]
# Agent callback shape varies across bluer minor versions — pin exact
# so a `cargo update` doesn't silently rewire the pairing flow. Verify
# with `cargo doc -p bluer --open` before bumping.
bluer = { version = "=0.17.4", features = ["bluetoothd"] }
futures = { workspace = true }
tokio = { workspace = true }
