[package]
name = "zerod-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
getrandom = "0.2"
gethostname = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }
zerod-bluetooth = { path = "../bluetooth" }
zerod-config = { path = "../config" }
zerod-discovery = { path = "../discovery" }
zerod-events = { path = "../events" }
zerod-proto = { path = "../proto" }
zerod-stream = { path = "../stream" }
zerod-systemd = { path = "../systemd" }
zerod-volume = { path = "../volume" }
