[package]
name = "zerod-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cpal = "0.15"
dash-mpd = { version = "0.18", default-features = false, features = ["scte35"] }
m3u8-rs = "6"
once_cell = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
serde_json = { workspace = true }
symphonia = { version = "0.5", default-features = false, features = ["isomp4", "aac", "mpa"] }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
