[package]
name = "zerod-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
dash-mpd = { version = "0.18", default-features = false, features = ["scte35"] }
m3u8-rs = "6"
once_cell = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
serde_json = { workspace = true }
symphonia = { version = "0.5", default-features = false, features = ["isomp4", "aac", "mpa"] }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
zerod-events = { path = "../events" }

# On Linux we go straight to libasound via the `alsa` crate (the
# `Access::RWInterleaved` / `snd_pcm_writei` path), bypassing cpal's
# mmap-based ALSA backend. cpal's mmap mode crashes inside libasound's
# pulse plugin on Raspberry Pi OS.
[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.15"
rtrb = "0.3"
