[package]
name = "zerod-systemd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
zerod-events = { path = "../events" }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { workspace = true }
